#651: Enhanced GetWorkflowEntrance* UCs with additional security and form fields